[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otterwiki_sidenotes"
description = "Vaguely Tuftean sidebar notes for OtterWiki."
version = "0.1.0"
authors = [
    { name = "John Leen", email = "jleen@saturnvalley.org" }
]

[project.entry-points.otterwiki]
redlinks = "otterwiki_sidenotes"
